--- a/tomblog.html
+++ b/tomblog.html
@@ -13,6 +13,7 @@
                 <h1>Arreglando este merge aprendi que no se pueden cambiar las mismas lineas en las diferentes Branches</h1>
                     <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
                     <p>Suscribete y dale like</p>
+                <h2>Arreglando este merge aprendi que no se pueden cambiar las mismas lineas en las diferentes Branches</h2>
             </div>
         </div>
     </body>
