--- a/tomblog.html
+++ b/tomblog.html
@@ -10,7 +10,7 @@
             <span id="tagline">Tu blog de INNOVATOR</span>
             </div>
             <div id="post">
-                <h1>Arreglando este merge aprendi que no se pueden cambiar las mismas lineas en las diferentes Branches</h1>
+                <h1>Este es el título atractivo e interesante del post</h1>
                     <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
                     <p>Suscribete y dale like</p>
                 <h2>Arreglando este merge aprendi que no se pueden cambiar las mismas lineas en las diferentes Branches</h2>
