--- a/tomblog.html
+++ b/tomblog.html
@@ -8,7 +8,7 @@
             <div id="container">
                 <div id="cabeza">
                 Cabeza 
-            <span id="tagline">Tu blog de INNOVATOR</span>
+            <span id="tagline">Tu blog de INNOVATOR and CREATOR </span>
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
