Nuevo producto, landing page para AI food Assistant

--- a/tomblog.html
+++ b/tomblog.html
@@ -1,21 +1,38 @@
+<!DOCTYPE html>
+<html lang="en">
 
-<html>
-    <head>
-        <title>My blog</title>
-        <link rel="stylesheet" href="css/estilos.css" />
-    </head>
-    <body>
-            <div id="container">
-                <div id="cabeza">
-                Cabeza 
-            <span id="tagline">Tu blog de INNOVATOR and CREATOR </span>
-            </div>
-            <div id="post">
-                <h1>Este es el título atractivo e interesante del post</h1>
-                    <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
-                    <p>Suscribete y dale like</p>
-                <h2>Arreglando este merge aprendi que no se pueden cambiar las mismas lineas en las diferentes Branches</h2>
-            </div>
-        </div>
-    </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AI Food Assistant</title>
+  <link rel="stylesheet" href="Styles.css">
+</head>
+
+<body>
+  <header>
+    <h1>AI Food Assistant</h1>
+    <p>Your Smart Food Companion</p>
+  </header>
+
+  <section class="features">
+    <h2>Features</h2>
+    <ul>
+      <li>Get personalized recipe recommendations</li>
+      <li>Track your daily calorie intake</li>
+      <li>Plan your meals with ease</li>
+      <li>Discover new cooking tips</li>
+    </ul>
+  </section>
+
+  <section class="cta">
+    <h2>Experience the Future of Cooking</h2>
+    <p>Sign up now for early access!</p>
+    <button>Sign Up</button>
+  </section>
+
+  <footer>
+    <p>&copy; 2023 AI Food Assistant. All rights reserved.</p>
+  </footer>
+</body>
+
 </html>
