Mejore el diseno, con foto, colores y centrado

--- a/tomblog.html
+++ b/tomblog.html
@@ -9,10 +9,11 @@
 </head>
 
 <body>
-  <header>
-    <h1>AI Food Assistant</h1>
-    <p>Your Smart Food Companion</p>
-  </header>
+    <header>
+        <img src="food-assistant.jpg" alt="AI Food Assistant" width="200">
+        <h1>AI Food Assistant</h1>
+        <p>Your Smart Food Companion</p>
+    </header>
 
   <section class="features">
     <h2>Features</h2>
