--- a/tomblog.html
+++ b/tomblog.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AI Food Assistant</title>
+  <title>AI Great Food Assistant</title>
   <link rel="stylesheet" href="Styles.css">
 </head>
 
 <body>
     <header>
         <img src="food-assistant.jpg" alt="AI Food Assistant" width="200">
-        <h1>AI Food Assistant</h1>
+        <h1>AI GREAT Food Assistant</h1>
         <p>Your Smart Food Companion</p>
     </header>
 
